# search-service-sdk

python/: pyproject.toml
rust/: Cargo.toml  README.md
rust/examples/: faceted_search.rs  filtering.rs  quickstart.rs  vector_filtered_search.rs
rust/src/: client.rs  error.rs  lib.rs  query.rs  response.rs  schema.rs
rust/tests/: live.rs
typescript/: package.json
