[package]
name = "search_service"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for the search-service HTTP API (BM25 + vector hybrid search)."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
